--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "git": "^0.1.5",
     "mongoose": "^6.10.0",
     "nodemon": "^2.0.20",
     "router": "^1.3.7"
